--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+      <script src="js/data.js"></script>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
       <script src="js/typed.js"></script>
       <script>
