push notifications fixed

--- a/www/index.html
+++ b/www/index.html
@@ -14,8 +14,9 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
+      <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
@@ -88,7 +89,7 @@
 
       </script>
   </head>
-  <body ng-app="starter" class="platform-android">s
+  <body ng-app="starter" class="platform-android">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
