getting data from api fixed

--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,6 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-      <script src="js/data.js"></script>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
       <script src="js/typed.js"></script>
       <script>
@@ -90,6 +89,7 @@
       </script>
   </head>
   <body ng-app="starter" class="platform-android">
+  <input type="hidden" id="synchronizeDB" isSynched="false" />
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
