- git ignore added build apk - downloaded bootstrap and jquery to local

--- a/www/index.html
+++ b/www/index.html
@@ -15,9 +15,9 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
-    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.2.1.js"></script>
+    <script src="lib/bootstrap/ui-bootstrap-tpls-1.2.1.js"></script>
 
-      <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+      <link href="lib/bootstrap/bootstrap.min.css" rel="stylesheet">
 
       <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -26,7 +26,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+      <script src="lib/jquery/jquery-1.9.1.min.js"></script>
       <script src="js/typed.js"></script>
       <script>
           $(function(){
