- save settings fixed - split button fixed - localStorage there....

--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,12 @@
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="lib/bootstrap/ui-bootstrap-tpls-1.2.1.js"></script>
 
-      <link href="lib/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <!-- angular-local-storage Library -->
+    <script src="lib/angular/angular.min.js"></script>
+    <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
+
+
+    <link href="lib/bootstrap/bootstrap.min.css" rel="stylesheet">
 
       <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
