--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 
     <link href="lib/bootstrap/bootstrap.min.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
-
+      <link href="css/nameTitles.css" rel="stylesheet">
 
       <script src="js/nameTitles.js"></script>
 
