--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -13,7 +13,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/bootstrap/ui-bootstrap-tpls-1.2.1.js"></script>
 
     <!-- angular-local-storage Library -->
@@ -22,61 +22,83 @@
 
 
     <link href="lib/bootstrap/bootstrap.min.css" rel="stylesheet">
-      <link href="css/style.css" rel="stylesheet">
-      <link href="css/nameTitles.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
-      <script src="js/nameTitles.js"></script>
 
-      <!-- cordova script (this will be a 404 during development) -->
+    <script src="js/nameTitles.js"></script>
+    <link href="css/nameTitles.css" rel="stylesheet">
+
+    <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-      <script src="lib/jquery/jquery-1.9.1.min.js"></script>
-      <script src="js/typed.js"></script>
-      <script>
-          $(function(){
+    <script src="js/audio2.js"></script>
 
-              $("#typed").typed({
-                  // strings: ["Typed.js is a <strong>jQuery</strong> plugin.", "It <em>types</em> out sentences.", "And then deletes them.", "Try it out!"],
-                  stringsElement: $('#typed-strings'),
-                  typeSpeed: 30,
-                  backDelay: 500,
-                  loop: false,
-                  contentType: 'html', // or text
-                  // defaults to false for infinite loop
-                  loopCount: false,
-                  callback: function(){ foo(); },
-                  resetCallback: function() { newTyped(); }
-              });
+    <script src="lib/jquery/jquery-1.9.1.min.js"></script>
+    <script src="js/typed.js"></script>
+    <script>
+        $(function () {
 
-              $(".reset").click(function(){
-                  $("#typed").typed('reset');
-              });
+            $("#typed").typed({
+                // strings: ["Typed.js is a <strong>jQuery</strong> plugin.", "It <em>types</em> out sentences.", "And then deletes them.", "Try it out!"],
+                stringsElement: $('#typed-strings'),
+                typeSpeed: 30,
+                backDelay: 500,
+                loop: false,
+                contentType: 'html', // or text
+                // defaults to false for infinite loop
+                loopCount: false,
+                callback: function () {
+                    foo();
+                },
+                resetCallback: function () {
+                    newTyped();
+                }
+            });
 
-          });
+            $(".reset").click(function () {
+                $("#typed").typed('reset');
+            });
 
-          function newTyped(){ /* A new typed object */ }
+        });
 
-          function foo(){ console.log("Callback"); }
+        function newTyped() { /* A new typed object */
+        }
 
-      </script>
+        function foo() {
+            console.log("Callback");
+        }
 
-      <script src="js/waitForElement.js"></script>
-  </head>
-  <body ng-app="starter" class="platform-android">
-  <input type="hidden" id="synchronizeDB" isSynched="false" />
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
 
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
-    <ion-nav-view></ion-nav-view>
-  </body>
+      // audio.initialize();
+    </script>
+
+    <script src="js/waitForElement.js"></script>
+</head>
+
+<body ng-app="starter" class="platform-android">
+<input type="hidden" id="synchronizeDB" isSynched="false">
+<input type="hidden" id="audioCanBePlayed" audioCanBePlayed="false">
+
+
+<!--div ng-controller="SoundController as vm">
+    <button ng-click="vm.play('bass');"
+            class="button icon-left ion-play button-assertive">Play Sound
+    </button>
+</div-->
+
+<!--
+  The nav bar that will be updated as we navigate between views.
+-->
+
+<!--
+  The views will be rendered in the <ion-nav-view> directive below
+  Templates are in the /templates folder (but you could also
+  have templates inline in this html file if you'd like).
+-->
+<ion-nav-view></ion-nav-view>
+</body>
 </html>
