--- a/www/index.html
+++ b/www/index.html
@@ -85,7 +85,7 @@
 <input type="hidden" id="audioCanBePlayed" audioCanBePlayed="false">
 
 
-<!--div ng-controller="SoundController as vm">
+<!--div ng-controller="AudioController as vm">
     <button ng-click="vm.play('bass');"
             class="button icon-left ion-play button-assertive">Play Sound
     </button>
