profiles size modified

--- a/www/index.html
+++ b/www/index.html
@@ -84,7 +84,7 @@
 
 </head>
 
-<body ng-app="starter" class="platform-android">
+<body ng-app="starter" class="platform-ios">
 <input type="hidden" id="synchronizeDB" isSynched="false">
 <input type="hidden" id="audioCanBePlayed" audioCanBePlayed="false">
 
