--- a/www/index.html
+++ b/www/index.html
@@ -34,14 +34,14 @@
     <!-- Controller -->
     <script src="js/gameController.js"></script>
     <script src="js/servicesController.js"></script>
-    <script src="js/mapsController.js"></script>
+    <script src="js/homeController.js"></script>
     <script src="js/settingsController.js"></script>
     <script src="js/audioController.js"></script>
 
     <script src="lib/jquery/jquery-1.9.1.min.js"></script>
     <script src="js/typed.js"></script>
     <script src="js/waitForElement.js"></script>
-    <script src="js/jQueryRotate.js"></script>
+    <!--script src="js/jQueryRotate.js"></script-->
 
     <script src="js/nameTitles.js"></script>
     <link href="css/nameTitles.css" rel="stylesheet">
@@ -82,21 +82,19 @@
 
     </script>
 
-<script>
-    var angle = 0;
-    setInterval(function(){
-        angle+=0.005;
-        $("#image").rotate(angle);
-    },5);
-</script>
 </head>
 
-<body ng-app="starter" class="platform-ios" id="bodyImg">
-
-<img style="position: absolute;overflow: hidden;margin: -200px;" src="img/background.png" id="image">
-
-<input type="hidden" id="synchronizeDB" isSynched="false">
+<body ng-app="starter" class="platform-ios">
+<!--input type="hidden" id="synchronizeDB" isSynched="false"-->
 <input type="hidden" id="audioCanBePlayed" audioCanBePlayed="false">
+
+
+<main>
+    <nav class="left_header"></nav>
+    <article class="middle_header"></article>
+    <aside class="right_header"></aside>
+</main>
+<footer></footer>
 
 <!--
   The nav bar that will be updated as we navigate between views.
@@ -107,6 +105,6 @@
   Templates are in the /templates folder (but you could also
   have templates inline in this html file if you'd like).
 -->
-<ion-nav-view></ion-nav-view>
+<!--ion-nav-view></ion-nav-view-->
 </body>
 </html>
