--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
 
     <link href="lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/layout.css" rel="stylesheet">
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -89,12 +90,32 @@
 <input type="hidden" id="audioCanBePlayed" audioCanBePlayed="false">
 
 
-<main>
-    <nav class="left_header"></nav>
-    <article class="middle_header"></article>
-    <aside class="right_header"></aside>
-</main>
-<footer></footer>
+<div class="page">
+<!-- header -->
+    <div class="header">
+        <div class="header_left"></div>
+        <div class="header_middle"></div>
+        <div class="header_right"></div>
+    </div>
+    <div class="content">
+        <div class="content_left"></div>
+        <div class="content_middle"></div>
+        <div class="content_right"></div>
+    </div>
+    <div class="content_strech">
+        <div class="content_strech_left"></div>
+        <div class="content_strech_middle"></div>
+        <div class="content_strech_right"></div>
+    </div>
+</div>
+<div class="footer">
+    <div class="footer_left"></div>
+    <div class="footer_middle"></div>
+    <div class="footer_right"></div>
+</div>
+
+
+
 
 <!--
   The nav bar that will be updated as we navigate between views.
